Save/Update files [ci skip]

--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -2,7 +2,7 @@
  rival:0 "ライバル"
  allied_to_rival:0 "ライバルと同盟"
  enemy_of_my_enemy:0 "敵の敵"
- subsidizing_our_armies:0 "私たちの軍を助成している"
+ subsidizing_our_armies:0 "我が軍を助成している"
  siphoned_income:0 "収入の吸い上げ"
  republic_same_religion:0 "同宗教"
  republic_different_religions_group:0 "異教"
@@ -560,11 +560,11 @@
  BUILDSPYNETWORK_DISCOV:1 "我々の諜報員が発見されたので$WHEN|Y$まで諜報員を送れません。"
  SPYNETWORK_DIPLO:0 "我々の$ADJ|Y$での諜報網規模は最大§Y100§!で、現在は$SIZE|Y$です。"
  SPYNETWORK_BENEFITS:0 "これは我々に次の効果をもたらします："
- SPYNETWORK_BENEFITS_SIEGE:0 "  $WHO|Y$に対しての包囲能力$AMT$"
- SPYNETWORK_BENEFITS_AE:0 "  $WHO|Y$への侵略的拡大の影響$AMT$"
- SPYNETWORK_BENEFITS_TECH_MIL:0 "  軍事技術コスト$AMT$"
- SPYNETWORK_BENEFITS_TECH_DIP:0 "  外交技術コスト$AMT$"
- SPYNETWORK_BENEFITS_TECH_ADM:0 "  統治技術コスト$AMT$"
+ SPYNETWORK_BENEFITS_SIEGE:0 "  $WHO|Y$に対しての包囲能力$AMT$"
+ SPYNETWORK_BENEFITS_AE:0 "  $WHO|Y$への侵略的拡大の影響$AMT$"
+ SPYNETWORK_BENEFITS_TECH_MIL:0 "  軍事技術コスト$AMT$"
+ SPYNETWORK_BENEFITS_TECH_DIP:0 "  外交技術コスト$AMT$"
+ SPYNETWORK_BENEFITS_TECH_ADM:0 "  統治技術コスト$AMT$"
  SPYNETWORK_BENEFITS_TECH:0 "§Y技術を購入する際には、諜報網の中で最高の技術コスト削減しか使用されません。§!"
  SPYNETWORK_OUTLINER:1 "我々の$ADJ|Y$での諜報網規模は最大で§Y100§!、現在は$SIZE|Y$です。"
  SPYNETWORK_OUTLINER_PLUS:0 "毎月、諜報網規模が$AMT|G$増加します。"
@@ -575,7 +575,7 @@
  CANCEL_BUILDSPYNETWORKTITLE:0 "諜報網の構築を停止"
  BUILDSPYNETWORK_LONG_DESC_1:0 "$COUNTRY|Y$内にスパイや情報提供者のネットワークを構築するために外交官を送りますか？"
  BUILDSPYNETWORK_LONG_DESC_1_SUBJECTS:0 "$COUNTRY|Y$とその従属国（$SUBJECTS$）内にスパイや情報提供者のネットワークを構築するために外交官を送りますか？"
- BUILDSPYNETWORK_LONG_DESC_2:0 "彼らは我々の諜報網規模を毎月$AMT|G$増加させます。\n\n我々の諜報員が活動中で諜報網規模が§Y25§!を超えている場合、毎月§R$RISK$%§!の発見される可能性があります。発見された際は対象国との関係を悪化させると共に、我々の諜報網規模が縮小され、さらにしばらくの間規模の成長が妨げられます。"
+ BUILDSPYNETWORK_LONG_DESC_2:0 "彼らは我々の諜報網規模を毎月$AMT|G$増加させます。\n\n我々の諜報員が活動中で諜報網規模が§Y25§!を超えている場合、発見される可能性が毎月§R$RISK$%§!あります。発覚すれば、対象国との関係が悪化し、諜報網規模は縮小され、しばらくの間規模の成長が妨げられます。"
  CANCEL_BUILDSPYNETWORK_LONG_DESC:0 "$COUNTRY|Y$において諜報網構築と情報収集を行っている諜報員を呼び戻しますか？我々の諜報網は構築を停止している間、規模が徐々に減衰します。"
  COUNTERESPIONAGE_OUTLINER:0 "$NAME$は$PROV|Y$（$COUNTRY|Y$）で防諜活動を行っています。これは彼らが我々へ送っている諜報員を発見する確率を$AMT$増加させます。"
  COUNTERESPIONAGE_NO_SUBJECT:1 "我々は従属国であるため防諜活動を行えません。"
@@ -880,7 +880,7 @@
  MUST_WAIT_UNTIL_NEXT_PEACE_OFFER:0 "別の和平案を送れるようになるまで、一日待たなければなりません。"
  PEACE_SUBJECT_WILL_CALL:0 "§R選択した場合、彼らの別の戦争へ参戦要請されます。§!"
  CLAIMSTATETITLE:0 "地方への請求権捏造"
- CLAIMSTATETITLEDESC:0 "地方内全州の請求権を捏造します。"
+ CLAIMSTATETITLEDESC:0 "地域にあるすべての州に対する請求権を捏造します。"
  CLAIM_STATE_SELECT_DESC:1 "地方への請求権捏造は、我が国の$ADJ|Y$諜報網規模を$COST|R$減少させた上で、§Y$AREA$§W地方にあるすべての$ADJ$領有州への請求権をもたらします。この請求権は$YEARS|Y$年間有効です。"
  cant_convert_subject_papacy:0 "どんなに頑張っても、ローマ教皇は$RELIGION$の受け入れを拒否します。"
  cant_convert_subject:0 "彼らは$RELIGION$の受容を拒否する。"
