--- a/source/localisation/institutions_l_english.yml
+++ b/source/localisation/institutions_l_english.yml
@@ -42,8 +42,8 @@
  MAPMODE_INSTITUTIONS_DESC:0 "その州がすべての制度を受容しているかで色分けされます。緑は全ての制度を受容しており、黄色は受容の途中であり、赤は全く受容していません。"
  HAS_EMBRACED_INSTITUTION:0 "$NAME$：§YPresent§!"
  EMBRACING_INSTITUTION:0 "$NAME$：§Y$VAL$%§!"
- NOT_EMBRACED:0 "受容されていない："
- OPEN_CLOSE_INSTITUTIONS:0 "制度を、開く/閉じる"
+ NOT_EMBRACED:0 "が受容されていない："
+ OPEN_CLOSE_INSTITUTIONS:0 "制度を開く/閉じる"
  HEADER_PRESENT_INSTITUTIONS:0 "§Y現在の制度§!"
  HEADER_GROWING_INSTITUTIONS:0 "§Y制度の伝播：§!"
  GROWING_INSTITUTION:0 "$NAME$：$VAL$、$PER_MONTH$/月"
