--- a/source/localisation/loadingtips_l_english.yml
+++ b/source/localisation/loadingtips_l_english.yml
@@ -75,7 +75,7 @@
  LOADING_TIP_73:0 "海軍維持費を減らすと船の交易力も減ります。小型船が多い場合、維持費の削減は収入の喪失となるでしょう。"
  LOADING_TIP_74:0 "戦争疲弊は、平和時にゆっくりと消えていき、\n戦争時には全く消えません。"
  LOADING_TIP_75:0 "包囲網に目を光らせておきましょう。\n近隣諸国の大多数と戦争するはめになるのは危険です。"
- LOADING_TIP_76:1 "隣接する州だけでなく、中核州と海域を共有している\n全ての州にも請求権を捏造することができます。"
+ LOADING_TIP_76:1 "隣接する州だけでなく、中核州と海域を共有している\n州にも請求権を捏造することができます。"
  LOADING_TIP_77:0 "多くの一般的な行動にはホットキーがあります。\nそれらはツールチップで確認することができます。"
  LOADING_TIP_78:0 "選択ユニットをグループに割り当てるにはCtrl+数字キーを、ユニットの選択には数字キーのみを押しましょう。"
  LOADING_TIP_79:1 "人的資源の回復はゆっくりです。人的資源を節約するために傭兵団を雇うことを考えてみましょう。"
