--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -3701,7 +3701,7 @@
  LANDBATTLEOVER_4:0 "戦闘中、$USNUM$人の我が兵士のうち、$USLOSS$人が殺されました。"
  LANDBATTLEOVER_5:0 "$OTHER$"
  LANDBATTLEOVER_6:0 "戦闘で$OTHERRESULT$しました。$THEIRNUM$人中、$THEIRLOST$人が殺されました。"
- LANDBATTLEOVER_LOG:0 "我々は$NAME$に$RESULT$しました。"
+ LANDBATTLEOVER_LOG:0 "我々は$NAME$相手に$RESULT$"
  LANDBATTLEOVER_BTN1:0 "OK"
  LANDBATTLEOVER_BTN2:0 "OK"
  LANDBATTLEOVER_BTN3:0 "移動"
@@ -3715,8 +3715,8 @@
  SIEGEOVER_3:0 "$NAME$でです！"
  SIEGEOVER_4:0 "包囲は$TIME$日間続けられ、守備隊は最終的に$REASON$で壊滅しました。"
  SIEGEOVER_5:0 "$WINNER$"
- SIEGEOVER_6:0 "をこれから支配します。守備隊は$RESDESC$"
- SIEGEOVER_LOG:0 "我々は$NAME$に$RESULT$しました。"
+ SIEGEOVER_6:0 "がこれから州を支配します。守備隊は$RESDESC$"
+ SIEGEOVER_LOG:0 "我々は$NAME$相手に$RESULT$"
  SIEGEOVER_BTN1:0 "OK"
  SIEGEOVER_BTN2:0 "OK"
  SIEGEOVER_BTN3:0 "移動"
@@ -3726,7 +3726,7 @@
  OCCUPATIONOVER_1:0 "$WINNER$が$PROV$を占領"
  OCCUPATIONOVER_2:0 "$MONARCHTITLE$、$PROV$は"
  OCCUPATIONOVER_3:0 "$WINNER$の占領下になりました"
- OCCUPATIONOVER_4:0 "$WETHEY$はこれから、その州を支配します。"
+ OCCUPATIONOVER_4:0 "これより$WETHEY$が州を支配します。"
  OCCUPATIONOVER_LOG:0 "$WINNER$は$PROV$を占領しました。"
  OCCUPATIONOVER_BTN1:0 "OK"
  OCCUPATIONOVER_BTN2:0 "OK"
@@ -3745,7 +3745,7 @@
  NAVALBATTLEOVER_4:0 " "
  NAVALBATTLEOVER_5:0 "$OTHER$"
  NAVALBATTLEOVER_6:0 "$OTHERRESULT$です。我々は$SHIPS$隻失い、彼らは$THEIRSHIP$隻失いました。$CAPTURE$は$WINNER$の手に落ちました。"
- NAVALBATTLEOVER_LOG:0 "我々は$NAME$に$RESULT$しました。"
+ NAVALBATTLEOVER_LOG:0 "我々は$NAME$相手に$RESULT$"
  NAVALBATTLEOVER_BTN1:0 "OK"
  NAVALBATTLEOVER_BTN2:0 "OK"
  NAVALBATTLEOVER_BTN3:0 "移動"
