--- a/source/localisation/nw_l_english.yml
+++ b/source/localisation/nw_l_english.yml
@@ -148,7 +148,7 @@
  AT_LEAST_ONE_PROVINCE_IN_COLONIAL_REGION:0 "$REGION$植民地域の少なくとも一つの州"
  NOT_ONE_PROVINCE_IN_COLONIAL_REGION:0 "$REGION$植民地域に州がない"
  ALL_PROVINCES_IN_COLONIAL_REGION:0 "$REGION$植民地域の全ての州"
- NOT_ALL_PROVINCES_IN_COLONIAL_REGION:0 "$REGION$地域の州全てではない"
+ NOT_ALL_PROVINCES_IN_COLONIAL_REGION:0 "$REGION$地域のすべての州ではない"
  LIBERTY_EFFECT:0 "独立欲求$PERC$を$DIRECTION$。\n"
  TARIFF_VALUE_EFFECT:0 "関税額$PERC$を$DIRECTION$。\n"
  ADD_LOCAL_AUTONOMY_EFFECT:0 "$WHERE$の自治率$PERC$を$DIRECTION$。\n"
