--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -44,7 +44,7 @@
  EStopMissionReason_NoInterestInTradeNode:0 "この国はこの交易ノードに関心がありません。"
  EStopMissionReason_OverriddenByNewCommand:0 "このユニットは新しい命令を与えられている。"
  EStopMissionReason_TooManyShips:0 "船の数が多すぎます。"
- EStopMissionReason_NeededForWar:0 "The unit is needed for war."
+ EStopMissionReason_NeededForWar:0 "戦争に必要なユニットです。"
  EStopMissionReason_TooManyPrivateers:0 "この国には私掠船が多すぎます。"
  EStopMissionReason_NeededForTransportation:0 "The unit is needed for transportation."
  EStopMissionReason_TooManyUnitsForExploration:0 "The unit is too big for exploration."
@@ -108,7 +108,7 @@
  UPGRADE_GREAT_PROJECT_IN_SUBJECT:0 "Upgrade of a $GREATPROJECTTYPE$ was started"
  UPGRADE_GREAT_PROJECT_IN_SUBJECT_EFFECT:0 "They will upgrade the $GREATPROJECT|Y$ in $PROVINCE$."
  UPGRADE_GREAT_PROJECT_IN_SUBJECT_WHAT:0 "to upgrade a $GREATPROJECTTYPE$ in our country"
- WARSCORE_COST_GREAT_PROJECTS:0 "From Great Projects: $VALUE$\n"
+ WARSCORE_COST_GREAT_PROJECTS:0 "大事業から：$VALUE$\n"
  ADD_CANAL:0 "Adds the canal $NAME|Y$."
  REMOVE_CANAL:0 "Removes the canal $NAME|Y$."
  CONFIRMGREATPROJECTTITLE:0 "Confirm $GREATPROJECT|Y$."
@@ -141,14 +141,14 @@
  TIER_2_DESCRIPTION:0 "有意義"
  TIER_3_DESCRIPTION:0 "金字塔"
  MATCHING_TIER_DESCRIPTION:0 "この$TYPE$は現在$TIERDESCRIPTION$と見なされています。現在の恩恵は以下になります："
- BETTER_TIER_DESCRIPTION:0 "この$TYPE$が$TIERDESCRIPTION$のレベルに向上した時、以下の恩恵を得ます："
+ BETTER_TIER_DESCRIPTION:0 "この$TYPE$が$TIERDESCRIPTION$のレベルになると、以下の恩恵を得ます："
  WORSE_TIER_DESCRIPTION:1 "$TIERDESCRIPTION$：あなたの$TYPE$はこのレベルを達成しています。"
- DOESNT_EXIST_TIER_DESCRIPTION:0 "At $TIERDESCRIPTION$ level, the $TYPE$ would give these benefits:"
- ON_UPGRADED_EVENT_DESC:0 "§YWhen upgraded§!:\n$EFFECT$\n"
- EXPENSEGREATPROJECTS:0 "Great Projects"
- EXPENSEGREATPROJECTMAINTENANCE:0 "Great Project Maintenance"
+ DOESNT_EXIST_TIER_DESCRIPTION:0 "$TIERDESCRIPTION$レベル時、$TYPE$は以下の利益をもたらします："
+ ON_UPGRADED_EVENT_DESC:0 "§Yアップグレード時§!：\n$EFFECT$\n"
+ EXPENSEGREATPROJECTS:0 "大事業"
+ EXPENSEGREATPROJECTMAINTENANCE:0 "大事業の維持費"
  CANNOT_BOOST_PROGRESS_FINISHED:0 "建設は完了しています。"
- GREAT_PROJECT_DESCRIPTION:0 "$TYPE$: $NAME|Y$"
+ GREAT_PROJECT_DESCRIPTION:0 "$TYPE$：$NAME|Y$"
  CONFIRMGREATPROJECT_MOVE_TITLE:0 "Confirm move."
  CONFIRMGREATPROJECT_MOVE_TEXT:0 "Are you sure you wish to move $GREATPROJECT|Y$ to $PROVINCE$?"
  MOVE_GREAT_PROJECT_IN_SUBJECT:0 "Movement of a $GREATPROJECTTYPE$ was started"
@@ -169,8 +169,8 @@
  REDUCE_INFRASTRUCTURE_DESC:0 "By reducing the infrastructure in $NAME|Y$ we will lose:\n$MODIFIERS$"
  REDUCE_INFRASTRUCTURE_TOOLTIP:0 "§Yインフラの削減§!"
  REDUCE_INFRASTRUCTURE_TOOLTIP_MODIFIER:0 "インフラの削減によって、この州は以下の効果を失います：\n$MODIFIER$\n"
- great_project_can_be_built_instant:0 "Great Project(s) can be built"
- great_project_can_be_built_delayed:0 "The following Great Project(s) can be built:\n$LIST$"
+ great_project_can_be_built_instant:0 "大事業が建設可能"
+ great_project_can_be_built_delayed:0 "以下の大事業が建設可能：\n$LIST$"
  enemy_invasion_imminent_instant:0 "差し迫った敵の侵攻"
  enemy_invasion_imminent_delayed:0 "以下の敵艦隊があなたの州に対し軍隊を下船させている：\n$LIST$"
  homepage_button_tooltip:0 "EUIVのホームページに移動する"
@@ -180,8 +180,8 @@
  MACRO_REQUIREMENT_NOT_FULFILLED_GREAT_PROJECT:0 "These benefits cannot be used because the requirements for the $TYPE$ $BUILDING$ are not fulfilled for this province."
  FORT_MAINTENANCE_LOCK_NONC:0 "Maintenance lock can only be toggled on forts you control, as those are the only ones you pay money for."
  FORT_MAINTENANCE_LOCK_SIEGE:0 "Maintenance lock cannot be toggled when the province is under siege!"
- FORT_MAINTENANCE_LOCK_ON:0 "The fort in this province will never be mothballed."
- FORT_MAINTENANCE_LOCK_OFF:0 "The fort in this province can be mothballed by this interface or by the \"Mothball all forts\" button in the Military tab."
+ FORT_MAINTENANCE_LOCK_ON:0 "この州の要塞が無効化されることはありません。"
+ FORT_MAINTENANCE_LOCK_OFF:0 "この州の要塞は、この画面または軍事タブにある「全要塞を無効化」ボタンで無効化できます。"
  FORT_MAINTENANCE_LOCK_ON_ACTION:0 "§GClick to allow mothballing forts§!"
  FORT_MAINTENANCE_LOCK_OFF_ACTION:0 "§GClick to never mothball forts§!"
  FREE_MERCHANT:0 "割り当てられていない商人がいます。"
@@ -190,26 +190,26 @@
  CANNOT_DRAFT_WRONG_REFORMS:1 "You cannot draft transport ships without the Eastern Plutocratic monarchy reform."
  CANNOT_DRAFT_NO_AVAILABLE_UNITS:0 "You can only draft units up to $PERCENTAGE$% of your force limit ($MAXUNITS$ units). You currently have $CURRENTUNITS$ units."
  CANNOT_DRAFT_UNIT_TYPE:0 "You cannot draft $TYPE$ units."
- mechanic_allow_draft_transport_ships_yes:0 "Allows cheap drafting of transport ships."
+ mechanic_allow_draft_transport_ships_yes:0 "輸送船を安価に召集することを許可します"
  mechanic_allow_draft_transport_ships_no:0 "Disallows cheap drafting of transport ships."
- DRAFT_TRANSPORT_SHIPS:0 "Draft Transport Ships"
- MACRO_DRAFT_NAVY_TEMPLATE:0 "Draft units"
+ DRAFT_TRANSPORT_SHIPS:0 "召集輸送船団"
+ MACRO_DRAFT_NAVY_TEMPLATE:0 "召集ユニット"
  MACRO_DRAFT_SAVING_TOOLTIP:0 "This template is available at a substantial saving:"
  MACRO_DRAFT_COST_TOOLTIP:0 "It will cost $COSTDRAFTED|Y$¤ for a saving of $SAVINGPERCENTAGE$% over the normal build cost of $COSTNORMAL|Y$¤."
  MACRO_DRAFT_MANPOWER_TOOLTIP:0 "It will use $MANPOWERDRAFTED|Y$ sailors for a saving of $SAVINGPERCENTAGE$% over the normal build cost of $MANPOWERNORMAL|Y$ sailors."
  MODIFIER_MONTHLY_HEIR_CLAIM_INCREASE:0 "毎月の後継者の請求権増加"
  MODIFIER_MONTHLY_HEIR_CLAIM_INCREASE_MODIFIER:0 "毎月の後継者の請求権増加補正"
- EXTEND_REGENCY_EFFECT_DESC:0 "$COUNTRY|Y$ will have its regency extended for $VALUE$ years.\n"
- REGENCY_ENDING:0 "Regency for $HEIR|Y$ ends on $DATE$."
+ EXTEND_REGENCY_EFFECT_DESC:0 "$COUNTRY|Y$は摂政を$VALUE$年延長します。\n"
+ REGENCY_ENDING:0 "$HEIR|Y$への摂政は$DATE$で終了します。"
  HAS_NOT_ESTATE_REGENCY:0 "Has NOT Estate Regency.\n"
  HAS_ESTATE_REGENCY:0 "Has Estate Regency.\n"
- CHANGE_ESTATE_REGENCY_TO_RULER_EFFECT_DESC:0 "$COUNTRY|Y$ will have its regency extended for $VALUE$ years.\n"
+ CHANGE_ESTATE_REGENCY_TO_RULER_EFFECT_DESC:0 "$COUNTRY|Y$は摂政を$VALUE$年延長します。\n"
  ESTATE_REGENCY_FOR:0 "$ESTATE$ regency for $HEIR$ (Age §Y$AGE$§W)"
  ESTATE_INTERREGNUM:0 "$ESTATE$ Interregnum"
  ADD_GREAT_PROJECT_TIER:0 "Changes the development of the $TYPE$ $NAME|Y$ by $TIERCHANGE$."
- MODIFIER_GREAT_PROJECT_UPGRADE_COST:0 "Great Project Upgrade Cost"
- MODIFIER_LOCAL_GREAT_PROJECT_UPGRADE_COST:0 "Local Great Project Upgrade Cost"
- LEDGER_GREAT_PROJECTS:0 "Great Projects"
+ MODIFIER_GREAT_PROJECT_UPGRADE_COST:0 "大事業のアップグレードコスト"
+ MODIFIER_LOCAL_GREAT_PROJECT_UPGRADE_COST:0 "地方の大事業のアップグレードコスト"
+ LEDGER_GREAT_PROJECTS:0 "大事業"
  LEDGER_BUILT:0 "Built"
  LEDGER_TIER:0 "Tier"
  LEDGER_DESTROYED:0 "Destroyed"
@@ -218,7 +218,7 @@
  CONFIRM_CONSOLIDATE_DEVELOPMENT_TITLE:1 "領土の開発度を集中"
  CONFIRM_CONSOLIDATE_DEVELOPMENT_TEXT:1 "$NAME$から我らのために開発度を移動します。このステートは$DEVELOPMENT|Y$の開発度を失います。開発度の大半は我らの首都へ移動し、その他一部は他のステートに分配され、残りは失われます。合計で$DEVGAINED|Y$の開発度を得られます。"
  CONFIRM_CONSOLIDATE_DEVELOPMENT_SUBJECT:0 "This will have the following effects on your subjects:"
- CONFIRM_CONSOLIDATE_DEVELOPMENT_SUBJECT_EFFECT:0 "$SUBJECT|Y$：\n独立欲求：$LIBERTYDESIRE|R$\n評価：$OPINION|R$"
+ CONFIRM_CONSOLIDATE_DEVELOPMENT_SUBJECT_EFFECT:0 "  $SUBJECT|Y$：\n    独立欲求：$LIBERTYDESIRE|R$\n    評価：$OPINION|R$"
  NO_CONSOLIDATION_POSSIBLE:1 "この場所から開発度の集中を行うことはできません。"
  CANT_CONSOLIDATE_DEVELOPMENT_COOLDOWN:1 "$DATE$まで、このステートから開発度の集中を行うことはできません"
  crown_colony:0 "直轄植民地"
@@ -274,7 +274,7 @@
  PEACE_PILLAGE_CAPITAL_STATE:0 "@$TAKERFLAG$が@$GIVERFLAG$の首都を略奪"
  capital_state_pillaged_by_rival:0 "$TARGET$は自国の首都を収奪した"
  PEACE_PILLAGE_CAPITAL_STATE_DESC:0 "$TAKER$ pillages $GIVER$ capital state"
- PILLAGE_CAPITAL_CANNOT_DONT_OCCUPY:0 "$CAPITAL|Y$ is not occupied by $TAKER|Y$ or one of its subjects."
+ PILLAGE_CAPITAL_CANNOT_DONT_OCCUPY:0 "$CAPITAL|Y$が$TAKER|Y$またはその従属国に占領されていません。"
  PILLAGE_CAPITAL_CANNOT_NO_VALID_PROVINCES:0 "All provinces in the capital area have been taken."
  NUM_OF_TIMES_PILLAGED_CAPITAL_STATE:1 "Number of times used 'Pillage capital state' in a peace treaty"
  NUM_OF_TIMES_CONCENTRATED_DEVELOPMENT:0 "開発の集中の実施回数"
@@ -285,7 +285,7 @@
  CANNOT_EXTEND_REGENCY_NOT_MONARCHY:0 "You can only extend a regency for an Heir in a Monarchy!"
  CANNOT_EXTEND_REGENCY_NOT_ENOUGH_LEGITIMACY:0 "You haven't got enough Legitimacy to extend your regency!"
  CANNOT_EXTEND_REGENCY_PENDING_EVENT:0 "Cannot extend regency while there are pending events!"
- EXTEND_REGENCY_PERFORM:0 "Extend the regency for $HEIR|Y$ by $YEARS$ years.\nThis will give a hit of $LEGITIMACY_HIT|R$ legitimacy from this action."
+ EXTEND_REGENCY_PERFORM:0 "$HEIR|Y$の摂政を$YEARS$年延期します。\nこの行動により、$LEGITIMACY_HIT|R$の正統性が打撃を受けます。"
  EXTEND_REGENCY_TITLE:0 "Extend Regency!"
  COUNTRY_HAS_BEEN_PILLAGED_TITLE:0 "Capital Pillaged!"
  COUNTRY_HAS_BEEN_PILLAGED_SETUP:0 "自国の首都が収奪された時。"
@@ -305,8 +305,8 @@
  IS_NOT_SUBJECT_TYPE_OF:0 "Is not a $SUBJECTTYPE$ of $WHO$.\n"
  HAS_SUBJECT_TYPE:0 "Has a $SUBJECTTYPE$.\n"
  HAS_NOT_SUBJECT_TYPE:0 "Has no $SUBJECTTYPE$.\n"
- HAS_RELIGION:0 "Religion in $PROVINCE|Y$ is $RELIGION|Y$"
- HAS_NOT_RELIGION:0 "Religion in $PROVINCE|Y$ is not $RELIGION|Y$"
+ HAS_RELIGION:0 "$PROVINCE|Y$の宗教が$RELIGION|Y$である"
+ HAS_NOT_RELIGION:0 "$PROVINCE|Y$の宗教が$RELIGION|Y$ではない"
  BREAK_ALLIANCE_CANNOT_COST:0 "同盟破棄を要請するには、§Y$COUNTRY$§!の好感度が§Y$COST$§!以上必要です。"
  BREAK_ALLIANCE_CANNOT_OPINION:0 "同盟破棄を要請するには、§Y$COUNTRY$§!の評価が§Y$OPINION$§!以上必要です。"
  BREAK_ALLIANCE_CANNOT_NOT_ALLIES:0 "You need to be allied with §Y$COUNTRY$§! to ask them to Break an Alliance."
@@ -561,12 +561,12 @@
  TRADE_FAVORS_FOR_GOLD_DECLINED_BTN1:0 "Too bad"
  TRADE_FAVORS_FOR_GOLD_DECLINED_BTN2:0 "Too bad"
  TRADE_FAVORS_FOR_GOLD_DECLINED_BTN3:0 "移動"
- TRADE_FAVORS_FOR_GOLD_CANNOT_NO_CASH:0 "$COUNTRY$ do not have $CASH|Y$¤"
- TRADE_FAVORS_FOR_GOLD_CANNOT_NEGATIVE:0 "$COUNTRY$ are losing money"
- TRADE_FAVORS_FOR_GOLD_CANNOT_DEBT:0 "$COUNTRY$ are $AMOUNT|Y$¤ in debt"
+ TRADE_FAVORS_FOR_GOLD_CANNOT_NO_CASH:0 "$COUNTRY$は$CASH|Y$¤も持っていません。"
+ TRADE_FAVORS_FOR_GOLD_CANNOT_NEGATIVE:0 "$COUNTRY$は赤字を垂れ流しています"
+ TRADE_FAVORS_FOR_GOLD_CANNOT_DEBT:0 "$COUNTRY$は$AMOUNT|Y$¤の負債を抱えています"
  TRADE_FAVORS_FOR_GOLD_CANNOT_COST:0 "金銭を要求するには、§Y$COUNTRY$§!の好感度が§Y$COST$§!以上必要です。"
  TRADE_FAVORS_FOR_GOLD_CANNOT_OPINION:0 "金銭を要求するには、§Y$COUNTRY$§!の評価が§Y$OPINION$§!以上必要です。"
- TRADE_FAVORS_FOR_GOLD_DESC2:0 "Spend $FAVOR|Y$ Favors in exchange for $MONTHS$ month's income ($CASH|Y$¤)."
+ TRADE_FAVORS_FOR_GOLD_DESC2:0 "$MONTHS$カ月分の収入（$CASH|Y$¤）と引き換えに$FAVOR|Y$の好感度を使います。"
  TRADE_FAVORS_FOR_GOLD_DESC:0 "We will ask that $RECIPIENT|Y$ give us $MONTHS$ month's income ($CASH|Y$¤) in exchange for $FAVOR|Y$ Favors."
  WE_TRADE_FAVORS_FOR_MEN_TITLE:0 "人的資源を好感度で引き換え"
  WE_TRADE_FAVORS_FOR_MEN_SETUP:0 "When we ask a country to give us some manpower as a Favor."
@@ -618,7 +618,7 @@
  TRADE_FAVORS_FOR_MEN_CANNOT_NO_MEN:0 "$COUNTRY$ do not have $MEN|Y$ Soldiers"
  TRADE_FAVORS_FOR_MEN_CANNOT_COST:0 "兵士を要求するには、§Y$COUNTRY$§!の好感度が§Y$COST$§!以上必要です。"
  TRADE_FAVORS_FOR_MEN_CANNOT_OPINION:0 "兵士を要求するには、§Y$COUNTRY$§!の評価が§Y$OPINION$§!以上必要です。"
- TRADE_FAVORS_FOR_MEN_DESC2:0 "Spend $FAVOR|Y$ Favors in exchange for $MONTHS$ months' supply ($MEN|Y$) of Soldiers."
+ TRADE_FAVORS_FOR_MEN_DESC2:0 "$MONTHS$カ月分の人的資源供給数（$MEN|Y$）と引き換えに$FAVOR|Y$の好感度を使います。"
  TRADE_FAVORS_FOR_MEN_DESC:0 "We will ask that $RECIPIENT|Y$ give us $MONTHS$ months' supply ($MEN|Y$) of Soldiers in exchange for $FAVOR|Y$ Favors."
  WE_TRADE_FAVORS_FOR_SAILORS_TITLE:0 "水兵を好感度で引き換え"
  WE_TRADE_FAVORS_FOR_SAILORS_SETUP:0 "When we ask a country to give us some Sailors as a Favor."
@@ -671,7 +671,7 @@
  TRADE_FAVORS_FOR_SAILORS_CANNOT_NO_SAILORS_AT_ALL:0 "$COUNTRY$ do not have any sailors"
  TRADE_FAVORS_FOR_SAILORS_CANNOT_COST:0 "水兵を要求するには、§Y$COUNTRY$§!の好感度が§Y$COST$§!以上必要です。"
  TRADE_FAVORS_FOR_SAILORS_CANNOT_OPINION:0 "水兵を要求するには、§Y$COUNTRY$§!の評価が§Y$OPINION$§!以上必要です。"
- TRADE_FAVORS_FOR_SAILORS_DESC2:0 "Spend $FAVOR|Y$ Favors in exchange for $MONTHS$ months' supply ($SAILORS|Y$) of Sailors."
+ TRADE_FAVORS_FOR_SAILORS_DESC2:0 "$MONTHS$カ月分の水兵供給数（$SAILORS|Y$）と引き換えに$FAVOR|Y$の好感度を使います。"
  TRADE_FAVORS_FOR_SAILORS_DESC:0 "We will ask that $RECIPIENT|Y$ give us $MONTHS$ months' supply ($SAILORS|Y$) of Sailors in exchange for $FAVOR|Y$ Favors."
  mechanic_free_concentrate_development_yes:0 "Can concentrate development with no losses."
  mechanic_free_concentrate_development_no:0 "Suffer development losses when concentrating development."
@@ -781,7 +781,7 @@
  TRADE_FAVORS_FOR_TRUST_CANNOT_COST:0 "You need at least §Y$COST$§! Favors with §Y$COUNTRY$§! to ask them for Trust."
  TRADE_FAVORS_FOR_TRUST_CANNOT_ALREADY_MAX:0 "You already have the full trust of §Y$COUNTRY$§!."
  TRADE_FAVORS_FOR_TRUST_CANNOT_OPINION:0 "You need at least §Y$OPINION$§! Opinion with §Y$COUNTRY$§! to ask them for Trust."
- TRADE_FAVORS_FOR_TRUST_DESC2:0 "Spend $FAVOR|Y$ Favors in exchange for $TRUST|Y$ Trust."
+ TRADE_FAVORS_FOR_TRUST_DESC2:0 "$TRUST|Y$の信頼と引き換えに$FAVOR|Y$の好感度を使います。"
  TRADE_FAVORS_FOR_TRUST_DESC:0 "We will ask that $RECIPIENT|Y$ give us $TRUST|Y$ Trust in exchange for $FAVOR|Y$ Favors."
  WE_TRADE_FAVORS_FOR_WAR_PREP_TITLE:0 "戦争の準備を求める"
  WE_TRADE_FAVORS_FOR_WAR_PREP_SETUP:0 "我々が他国に好感度によって戦争の準備を求めたとき"
@@ -839,8 +839,8 @@
  CALL_CHECKBOX_ALLY:0 "§RYou cannot declare a country you are allied with as a co-belligerent.§!"
  HAS_GREAT_PROJECT_OF_TYPE:0 "Has a $NAME|Y$"
  HAS_NOT_GREAT_PROJECT_OF_TYPE:0 "Does not have a $NAME|Y$"
- HAS_A_GREAT_PROJECT:0 "Has a §YGreat Project§!"
- HAS_NOT_A_GREAT_PROJECT:0 "Does not have a §YGreat Project§!"
+ HAS_A_GREAT_PROJECT:0 "§Y大事業§!がある"
+ HAS_NOT_A_GREAT_PROJECT:0 "§Y大事業§!がない"
  AT_TIER:0 "at §YTier $TIER$§!"
  COT_DOWNGRADE_NOT_OWNER:0 "§RYou cannot downgrade the Center of Trade of a province you do not own!§!"
  CANNOT_CONVERT_TO_PRIMITIVE:0 "You cannot force a nation to become Primitive."
@@ -854,8 +854,8 @@
  CANNOT_PROVINCE_IS_BEING_PILLAGED:0 "$PROVINCE|Y$は既に収奪された後です。"
  MAY_BUILD_FLAGSHIPS:0 "May Build Flagships"
  MAY_BUILD_FLAGSHIPS_SHORT:0 "Build Flagships"
- FREE_MERCHANT_DESC:0 "商人はあなたが交易力を有している交易ノードにおいて好きな方向へそれを転送したり、自信の交易首都から資金を回収するために割り当てたりすることができます。今は空いている商人がいるので交易ノードを選択してタスクを割り当ててそれらの能力を活用しましょう。"
- REGENCY_ENDING_DESC:0 "If your Heir is ready and has a good Claim, you should let him ascend to the throne when the Regency ends. If not, you can choose to extend the Regency by another five years through the Court interface.\nClick to view your Court.\n\nCurrent Claim Strength: $CLAIM$"
+ FREE_MERCHANT_DESC:0 "商人は交易ノードにおいてあなたが有している交易力を好きな方向へ転送したり、交易首都から資金を回収するために割り当てたりすることができます。現在、暇な商人がいるので、交易ノードを選択しタスクを割り当てて、彼らの能力を活かしましょう。"
+ REGENCY_ENDING_DESC:0 "あなたの後継者に準備ができていて、請求権が十分であれば、摂政が終了したときに王位に就かせるべきです。そうでない場合は、宮廷インターフェイスで摂政をさらに5年間延長することができます。\nクリックすると宮廷が表示されます。\n\n現在の請求権の強さ：$CLAIM$"
  CANNOT_CONVERT_NOT_RELIGION_OR_SECONDARY_RELIGION:0 "$NAME$ is not a §Y$RELIGION$§! or a §Y$SECONDARYRELIGION$§! province, so it is not possible to change culture. Send some missionaries first."
  NO_GARRISON:0 "There is no garrison here."
  PILLAGE_CAPITAL_CANNOT_NO_DEV:0 "Their capital is too poor to pillage."
@@ -879,7 +879,7 @@
  UPGRADE_GREAT_PROJECT_COST:0 "$COST|Y$¤にて$TYPE$$NAME|Y$のアップグレードを開始します。"
  ALL_OTHER_TREATIES_COST:0 "$COST$ Cost for all other treaties."
  CENTRE_OF_TRADE_UPGRADE:0 "Centre of Trade Upgrade"
- CANNOT_CONSOLIDATE_DEV_STATE:0 "You can only concentrate development from your territories, not states"
+ CANNOT_CONSOLIDATE_DEV_STATE:0 "ステートではなく、テリトリーからのみ開発度を集中させることができます"
  RELEASE_CULTURE:0 "They will have §Y$CULTURE$§! culture."
  CALL_CHECKBOX_WILL_CALL_SUBJECT:0 "Your $SUBJECTTYPE$ §Y$COUNTRY$§! will be called into your war against §Y$TARGET$§!."
  CALL_CHECKBOX_WILL_NOT_CALL_SUBJECT:0 "Your $SUBJECTTYPE$ §Y$COUNTRY$§! will NOT be called into your war against §Y$TARGET$§!."
@@ -889,7 +889,7 @@
  estate_bribe:0 "Placate $ESTATE$"
  should_migrate_instant:0 "Tribe should migrate"
  should_migrate_delayed:0 "Your capital's Devastation is getting high and you should think about migrating to one of the following provinces:\n$LIST$"
- STATE_INCOME_DEDUCTIONS:0 "...and the following deductions for state maintenance:"
+ STATE_INCOME_DEDUCTIONS:0 "…そして以下がステート維持費として差し引かれます："
  PATRIARCH_MAP_TT_CANT:0 "$NAME|Y$ cannot get a Metropolitan."
  CANNOT_FORCE_TRIBUTARY_SUBJECT_TYPE_DOESNT_ALLOW:0 "$TAKER|Y$ is a $SUBJECTTYPE|Y$, which means they cannot have subjects themselves."
  CONFIRM_CONSOLIDATE_DEVELOPMENT_TEXT_FOR_ANOTHER:0 "$NAME$から$ACTUALTAKER$の為に開発度を移動します。このステートは$DEVELOPMENT|Y$の開発度を失います。開発度の大半は$ACTUALTAKERADJ$の首都へ移動し、その他一部は他のステートに分配され、残りは失われます。$ACTUALTAKER$は合計で$DEVGAINED|Y$の開発度を得られます。"
@@ -1022,9 +1022,9 @@
  EXTEND_REGENCY_IMPERIAL_AUTHORITY_HIT:0 "Since you are the Emperor, you will also suffer a reduction in Imperial Authority of $IAHIT|Y$."
  ABDICATE_PERFORM_IRO2_NEITHER:0 "There will be a hit of $PRESTIGE_HIT|R$ prestige from this action."
  BREAK_ALLIANCE_COOLDOWN:0 "We can only ask an ally to break an Alliance once every $YEARS|Y$ years.\nThey will be able to do it again in $UNTIL|Y$."
- TRADE_FAVORS_FOR_GOLD_COOLDOWN:0 "$COUNTRY$ can only ask an ally to trade Favors for gold once every $YEARS|Y$ years.\nThey will be able to do it again in $UNTIL|Y$."
- TRADE_FAVORS_FOR_MANPOWER_COOLDOWN:0 "$COUNTRY$ can only ask an ally to trade Favors for Manpower once every $YEARS|Y$ years.\nThey will be able to do it again in $UNTIL|Y$."
- TRADE_FAVORS_FOR_SAILORS_COOLDOWN:0 "$COUNTRY$ can only ask an ally to trade Favors for Sailors once every $YEARS|Y$ years.\nThey will be able to do it again in $UNTIL|Y$."
+ TRADE_FAVORS_FOR_GOLD_COOLDOWN:0 "$COUNTRY$は、$YEARS|Y$年に一度だけ、味方に好意と金の交換を依頼することができます。\n$UNTIL|Y$になると再び交換できるようになります。"
+ TRADE_FAVORS_FOR_MANPOWER_COOLDOWN:0 "$COUNTRY$は、$YEARS|Y$年に一度だけ、味方に好意と人的資源の交換を依頼することができます。\n$UNTIL|Y$になると再び交換できるようになります。"
+ TRADE_FAVORS_FOR_SAILORS_COOLDOWN:0 "$COUNTRY$は、$YEARS|Y$年に一度だけ、味方に好意と水兵の交換を依頼することができます。\n$UNTIL|Y$になると再び交換できるようになります。"
  REDUCE_RELATIONS_COOLDOWN:0 "$COUNTRY$ can only ask an ally to reduce relations with another country once every $YEARS|Y$ years.\nThey will be able to do it again in $UNTIL|Y$."
  DIPLO_SAILORS:0 "$WHO$ Sailors: "
  DIPLO_LOW_SAILORS:0 "$WHO$ has low Sailors: "
