--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -368,10 +368,10 @@
  EXPENSE_PAPAL_ACTION:0 "教皇領行動"
  CURIA_CONTRIBUTION_ENTRY:0 "$NAME|Y$における$ESTATE$（$PERC|2%$）：$VAL|Y2$¤\n"
  AND_FROM_X_MORE_COUNTRIES:0 "さらに$NUM|Y$の小国も貢献しています…"
- CURIA_CALL_ECUMENICAL_COUNCIL:0 "$COST|Y$¤を使ってトリエント公会議を召集します。$TREASURY|Y$¤が教皇庁の国庫に入り、次の教皇の支配者になるため§Y$INFLUENCE$§Wの投資された影響力を獲得します。"
+ CURIA_CALL_ECUMENICAL_COUNCIL:0 "$COST|Y$¤を使って公会議を召集します。$TREASURY|Y$¤が教皇庁の国庫に入り、次の教皇の支配者になるため§Y$INFLUENCE$§Wの投資された影響力を獲得します。"
  CURIA_CALL_ECUMENICAL_COUNCIL_NOT_ENOUGH_MONEY:0 "§R公会議を召集するには$COST|Y$¤が必要ですが、$AVAILABLE|Y$¤しか持っていません。§!"
  CURIA_CALL_ECUMENICAL_COUNCIL_TITLE:0 "公会議を召集"
- CURIA_CALL_ECUMENICAL_COUNCIL_DESC:0 "$COST|Y$¤を使ってトリエント公会議を召集しますか？$TREASURY|Y$¤が教皇庁の国庫に入り、次の教皇の支配者になるため§Y$INFLUENCE$§Wの投資された影響力を獲得します。"
+ CURIA_CALL_ECUMENICAL_COUNCIL_DESC:0 "$COST|Y$¤を使って公会議を召集しますか？$TREASURY|Y$¤が教皇庁の国庫に入り、次の教皇の支配者になるため§Y$INFLUENCE$§Wの投資された影響力を獲得します。"
  CURIA_BUY_INDULGENCE:1 "$COST|Y$¤を使ってあなたの罪に対して免罪符を購入します。$TREASURY|Y$¤が教皇庁の国庫に入り、あなたは年間$INFLUENCE|G$の教皇への影響力を$YEARS|Y$年間獲得します。教皇はこの自発的な申し出に感謝し、それゆえ、これは彼と我々の関係を良くするでしょう。"
  CURIA_BUY_INDULGENCE_EXCOMMUNICATED:0 "破門されていることで、あなたの免罪符の価格は$MULTIPLIER|Y$倍になります。一方、教皇は価格を引き上げることであなたの信仰の証に報い、$YEARS|Y$年間あなたを破門しようとはしないでしょう。"
  CURIA_BUY_INDULGENCE_TITLE:0 "免罪符の購入"
@@ -698,7 +698,7 @@
  alert_piety_interaction_delayed:0 ""
  CROWN_LAND_NO_EFFECT:0 "影響なし"
  CROWN_LAND_NO_EFFECT_TOOLTIP:0 "現在の直轄地のレベルによる影響はありません。"
- CROWN_LAND_LEVEL_DESC:3 "直轄地は、国家が直接支配している領土の量を示す尺度です。§Y50%§!を超える領土を保持することは我々の支配に大きな恩恵をもたらすでしょう。§Y30%§!未満の領土しか保持していないと我々の権威にペナルティが与えられます。\n\n直轄地は以下によって得られます：\n階級から§Y領土を奪う§!。\n州を§Y開発する§!。\n全階級の総合影響力が§Y60%§!未満の§Y領土を征服§!する。\n絶対主義の高い§Y領土を征服§!する。"
+ CROWN_LAND_LEVEL_DESC:3 "直轄地は、国家が直接支配している領土の量を示す尺度です。§Y50%§!を超える領土を保持することは我々の支配に大きな恩恵をもたらすでしょう。§Y30%§!未満の領土しか保持していないと我々の権威にペナルティが与えられます。\n\n直轄地は以下によって得られます：\n  階級から§Y領土を奪う§!。\n  州を§Y開発する§!。\n  全階級の総合影響力が§Y60%§!未満の§Y領土を征服§!する。\n  絶対主義の高い§Y領土を征服§!する。"
  DELEGATE_PATRIARCH_TOOLTIP:0 "§Y総主教に割り当てる§!"
  DELEGATE_HOLYORDER_TOOLTIP:0 "§Y$ORDER$を割り当てる§!"
  DELEGATE_PASHA_ALREADY_HAS:0 "§R$STATE|Y$にはすでにパシャが割り当てられています！§!\n"
@@ -739,7 +739,7 @@
  ADJECTIVE_MISSION_TITLE:0 "$ADJ$のミッション"
  SECEDE_SUBJ_PROVINCES:0 "$WHO$は$WHAT$を$TO$に割譲し、独立欲求が$LD|-$変化します。"
  STATES_TAB_TOOLTIP:0 "州の管理"
- EDICTS_TAB_TOOLTIP:0 "州の布告"
+ EDICTS_TAB_TOOLTIP:0 "ステートの布告"
  DELEGATE_TAB_TOOLTIP:0 "統治の委任"
  TRADE_COMPANY_TAB_TOOLTIP:0 "交易会社投資"
  SORT_BY:0 "$WHAT|Y$で並び替えます。"
