--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -590,7 +590,7 @@
  hun_ottoman_borders_three_desc:0 "ブルガリアの人々は何年もの間、何らかの外国の占領下にあった。最初は自称ローマ帝国、そして確実に残忍な宗主国であったトルコ。彼らを解放しよう。"
  hun_ottoman_borders_four_title:0 "コンスタンティノープルへの進軍"
  hun_ottoman_borders_four_desc:0 "偉大なる都市コンスタンティノープルを征服し、バルカン半島への請求権を主張せよ！"
- secure_the_imperial_crown.tooltip:1 " の選帝侯が：\n§Y[Root.GetName]§!が皇帝となることを支持している。\n§Y[Root.GetName]§!に対する評価が§Y100§!以上である。"
+ secure_the_imperial_crown.tooltip:1 "の選帝侯が：\n§Y[Root.GetName]§!が皇帝となることを支持している。\n§Y[Root.GetName]§!に対する評価が§Y100§!以上である。"
  building_alliances.tooltip:0 "以下に該当する国家が§Y2§!以上である：\n§Y[Root.GetName]§!と同盟を結んでいる。\n§Y[Root.GetName]§!に対する評価が§Y150§!以上である。"
  conquer_warmia_title:1 "プロイセンの奪還"
  conquer_warmia_desc:0 "プロイセンの土地は、ポーランドの王冠に従うという理解の下、チュートン騎士団によってキリスト教化された。騎士たちはこれをすぐに否定し、何百年もの月日が経ったが、我々は何をすべきかを忘れてはいない。"
@@ -617,9 +617,9 @@
  fra_canada_discovery.tooltip:0 "§Y[Root.GetName]§!がカナダ植民地域内の任意の州を発見する"
  fra_carib_discovery.tooltip:0 "§Y[Root.GetName]§!がカリブ海植民地域内の任意の州を発見する"
  fra_louis_discovery.tooltip:0 "§Y[Root.GetName]§!がルイジアナ植民地域内の任意の州を発見する"
- fra_canada_colony.tooltip:1 "§Y[Root.GetName]§!あるいは彼らの非朝貢国の従属国が、カナダ植民地域に、完全に植民地化された州を§Y5§!州以上領有する"
- fra_louisiana_colony.tooltip:1 "§Y[Root.GetName]§!あるいは彼らの非朝貢国の従属国が、ルイジアナ植民地域に、完全に植民地化された州を§Y5§!州以上領有する"
- fra_carib_colony.tooltip:1 "§Y[Root.GetName]§!あるいは彼らの非朝貢国の従属国が、カリブ海植民地域に、完全に植民地化された州を§Y5§!州以上領有する"
+ fra_canada_colony.tooltip:1 "§Y[Root.GetName]§!またはその従属国（非朝貢国）が、カナダ植民地域に、完全に植民地化された州を§Y5§!州以上領有する"
+ fra_louisiana_colony.tooltip:1 "§Y[Root.GetName]§! またはその従属国（非朝貢国）が、ルイジアナ植民地域に、完全に植民地化された州を§Y5§!州以上領有する"
+ fra_carib_colony.tooltip:1 "§Y[Root.GetName]§! またはその従属国（非朝貢国）が、カリブ海植民地域に、完全に植民地化された州を§Y5§!州以上領有する"
  fra_bengal_discovery.tooltip:0 "§Y[Root.GetName]§!がベンガル地方内の任意の州を発見する"
  fra_coromandel_discovery.tooltip:0 "§Y[Root.GetName]§!がコロマンデル地方内の任意の州を発見する"
  defend_the_american_colonies_title:0 "自由の守護"
@@ -647,7 +647,7 @@
  miss_discover_east_africa:0 "§Y[Root.GetName]§!が東アフリカ地方内の任意の州を発見する。"
  miss_discover_horn_africa:0 "§Y[Root.GetName]§!がモガディシュ、マジーティーンあるいはソマリランド地域内の任意の州を発見する。"
  portugal_discovers_india.tooltip:0 "§Y[Root.GetName]§!がゴアと、コロマンデル地方内の任意の州を発見する。"
- ned_taiwan.tooltip:0 "§Y[Root.GetName]§!が台湾地域のすべての州を所有するか、完全に植民地化する。"
+ ned_taiwan.tooltip:0 "§Y[Root.GetName]§!が台湾全域を領有するか、完全に植民地化する。"
  miss_discover_malaya:0 "§Y[Root.GetName]§!がマラヤ地方内の任意の州を発見する。"
  miss_discover_malacca:0 "§Y[Root.GetName]§!がマラッカ地方内の任意の州を発見する。"
  miss_colonize_malaya:0 "§Y[Root.GetName]§!がマラヤ地方において、少なくとも1つの完全に植民地化された州を所有する。"
@@ -668,7 +668,7 @@
  miss_colonize_canada:0 "§Y[Root.GetName]§!あるいは彼らの従属国が、カナダ植民地域に、完全に植民地化された州を1州でも領有する。"
  eng_rb_spice_islands.tooltip:0 "§Y[Root.GetName]§!がインドネシアとモルッカ勅許で、完全に植民地化された州を1州以上領有する。"
  miss_discover_greenland:0 "§Y[Root.GetName]§!がグリーンランド地域の任意の州を所有する。"
- miss_colonize_greenland:0 "§Y[Root.GetName]§!がグリーンランド地域のすべての州を所有するか、完全に植民地化する。"
+ miss_colonize_greenland:0 "§Y[Root.GetName]§!がグリーンランド全域を領有するか、完全に植民地化する。"
  eng_rb_own_thirteen_colonies.tooltip:0 "§Y[Root.GetName]§!あるいは彼らの従属国が、東アメリカ植民地域に、完全に植民地化された州を§Y15§!州以上領有する。"
  gain_foothold_in_ireland.tooltip:0 "§Y[Root.GetName]§!がアイルランドの任意の州を所有する。"
  gain_foothold_in_france.tooltip:0 "§Y[Root.GetName]§!がフランス地方の任意の州を所有する。"
@@ -1104,8 +1104,8 @@
  tau_conquer_bengal_desc:0 "どのビルマの王国も今までベンガル内まで領域を拡大した事はなかった。我々が最初となるだろう。"
  tau_great_mandala_title:0 "大マンダラ"
  tau_great_mandala_desc:0 "偉大なる皇帝は宇宙の中心であらねばならない。強大なる王は彼の前に頭を垂れ、彼の影をも踏まぬよう崇めなければならない。"
- tau_great_mandala.tooltip:0 "朝貢国以外の従属国の内、総開発度が§Y150§!以上あり、かつ独立欲求が§Y50§!以下の従属国が存在する。"
- gen_north_india_powerful_subject.tooltip:0 "朝貢国以外の従属国の内、総開発度が§Y50§!以上あり、かつ独立欲求が§Y50§!以下である従属国が存在する。"
+ tau_great_mandala.tooltip:0 "従属国（非朝貢国）の内、総開発度が§Y150§!以上あり、かつ独立欲求が§Y50§!以下の従属国が存在する。"
+ gen_north_india_powerful_subject.tooltip:0 "従属国（非朝貢国）の内、総開発度が§Y50§!以上あり、かつ独立欲求が§Y50§!以下である従属国が存在する。"
  tau_dragon_throne_title:0 "竜の玉座の奪取"
  tau_dragon_throne_desc:1 "我が国はこれまで目にした事がない偉大な帝国であろう。強大な中国でさえ、我が支配を承知しているだろう。竜の玉座を奪い、新しい帝国の王朝を宣言せねばならない。"
  guj_walls_of_ahmadabad_mission_title:0 "[Root.Capital.GetCapitalName]の発展"
@@ -1379,7 +1379,7 @@
  swedish_deluge_mission_desc:0 "ストックホルムからの気掛かりな報告を聞いた。その君主は、我が国家を灰燼に帰することを目標に、ポーランドへの壊滅的な侵攻を計画している。これを実現させてはならない。彼らが我々を攻撃する前に、ストックホルムを攻撃せねばならない！"
  revenge_for_varna_mission_title:0 "ヴァルナに対する復讐"
  revenge_for_varna_mission_desc:0 "高貴な王ヴワディスワフ3世は、ヴァルナにて異教徒のトルコ人との戦いにおいて残酷に殺された。彼の死は我が国に大きな不透明感をもたらし、ハンガリーとの同君連合を終わらせた。この酷い悪事に対して報復せねばならず、ヴァルナ十字軍を刷新せねばならない。トルコ人をヨーロッパから追放せねばならない！"
- poland_varna_tt:0 "§Y[Root.Country.GetName]§!は§Yオスマン§!が領有するカルパチア及びバルカン全域に請求権を得ます。"
+ poland_varna_tt:0 "§Y[Root.Country.GetName]§!は、§Yオスマン§!が領有するカルパチア及びバルカン全域に対する請求権を獲得します。"
  union_over_hungary_mission_title:0 "ハンガリー同君連合"
  union_over_hungary_mission_desc:0 "ヴワディスワフ3世の死により、ポーランドとハンガリーの同君連合は解消し、別々の道を歩んだ。ハンガリーの継承に対する我々の請求権を取り戻す時だ。"
  union_over_bohemia_mission_title:0 "ボヘミア同君連合"
@@ -1401,7 +1401,7 @@
  order_of_the_dragon_desc:0 "トルコ人をキリスト世界の境界から撃退するために設立されたドラゴン騎士団は深刻な衰退に陥っている。ヴァルナでの壊滅的な敗北は、多くの反オスマン連合の人々の信仰を鎮めてしまった。我々はこれらの同盟を回復し、トルコ人に対して団結して立ち向かわねばならない。"
  rmn_impale_the_sultan_title:0 "スルタンを突き刺せ"
  rmn_impale_the_sultan_desc:0 "トルコのスルタンは大群の兵士と城壁のある砦の背後に隠れているので、安全だと信じている。我々は神の裁きから隠れることのできる者は誰もいないことを彼に示す。彼は自分の命を持ってキリスト世界に対する罪を償うだろう！"
- romania_turk_tt:0 "§Y[Root.Country.GetName]§!は§Yオスマン§!が領有するバルカン地方の全州に請求権を獲得します"
+ romania_turk_tt:0 "§Y[Root.Country.GetName]§!は、§Yオスマン§!が領有するバルカン全域に対する請求権を獲得します"
  rmn_drive_out_the_turks_title:0 "トルコ人の追放"
  rmn_drive_out_the_turks_desc:0 "ギリシャとブルガリアの人々を抑圧者から解放せねばならない。ついにトルコ人の侵略者をボスポラス海峡の向こう側に追い返す時が来た！"
  rmn_heir_of_rome_title:0 "ローマの継承者"
@@ -1662,7 +1662,7 @@
  por_bandeirantes_tooltip:0 "§Y金が発見される確率が上がります。§!"
  gc_por_jesuits_title:0 "イエズス会伝道団の設立"
  gc_por_jesuits_desc:0 "新世界征服の宗教的目標を無視してはならない。利益目的だけではなく、この土地を本拠地と呼ぶ異教徒達の啓発目的の為にもここにいる。その為には、ブラジルでの布教団設立の為にイエズス会の司祭達を招致し、彼らが野蛮な慣習を捨て去るよう、原住民に神の道の教育を行うべきだ。"
- port_jesuits_tooltip:1 "§Yブラジル植民地§!で自身か自身の非朝貢国が領有する§Y7§!つのステートに§Yイエズス§!会が割り当てられている。"
+ port_jesuits_tooltip:1 "§Yブラジル植民地§!で自国または従属国（非朝貢国）が領有する§Y7§!つのステートに§Yイエズス§!会が割り当てられている。"
  gc_por_wine_monopolies_title:0 "ワインの独占"
  gc_por_wine_monopolies_desc:0 "ワインの輸出入は、多くの大西洋港で厳重に管理されている。できるだけ多くの港でワイン交易の独占権を得る交易協定を確保する為、最善の努力を尽くすべきだ。"
  por_wine_tooltip:0 "自国か従属国が§Y工房§!もしくは§Y会計所§!が建造されており、§Yワイン§!が産出される州を§Y10§!州以上領有する。"
@@ -1910,7 +1910,7 @@
  cas_carib_rnw:0 "新世界に州を所有する"
  colombia_holy_order_tooltip:0 "§Yコロンビア植民地方§!で修道会が割り当てられたステートを§Y5§!つ、§Y[Root.GetName]§!かその従属国が領有する。"
  mexico_holy_order_tooltip:0 "§Yメキシコ§!地方で修道会が割り当てられたステートを§Y5§!つ、§Y[Root.GetName]§!かその従属国が領有する。"
- cas_spice_islands_tooltip:0 "§Y[Root.GetName]§!が§Yモルッカ§!地方内の全ての州を発見する"
+ cas_spice_islands_tooltip:0 "§Y[Root.GetName]§!が§Yモルッカ§!全域を発見する。"
  native_reductions_tooltip:0 "§Y北アメリカ§!と§Y南アメリカ§!で修道会が割り当てられたステートを§Y15§!つ、§Y[Root.GetName]§!かその従属国が領有する。"
  por_japan_mission_tooltip:0 "[Root.GetName]が§Y肥前§!の支配者と良好な関係の場合、イベント「§Y長崎のポルトガル人§!」が発生します。\nそうでない場合は、§G3.00§!の重商主義を獲得します。"
  new_world_modernization_tag_title:0 "新世界の近代化"
@@ -1983,7 +1983,7 @@
  oceania_remove_euro_desc:0 "侵略的なヨーロッパ人は、急速にオセアニアを征服しており、我々の伝統的な故郷にも拡大している。彼らを船へと追いやる必要がある。"
  oceania_sunset_invasion_title:0 "日沈む地からの侵略"
  oceania_sunset_invasion_desc:0 "侵略者たちは我が国から逃げ出した。しかしそれで十分だろうか？いずれは彼らはより恐ろしい軍隊とともに戻ってくるかもしれない。我々は彼らをヨーロッパへと追跡しよう。"
- colombia_holy_order_alternative_tooltip:0 "§Y[Root.GetName]§!もしくはその従属国が§Yコロンビア植民地方§!で、宗教が§Y[Root.Religion.GetName]§!の州を§Y25§!州領有する"
- mexico_holy_order_alternative_tooltip:0 "§Y[Root.GetName]§!もしくはその従属国が§Yメキシコ§!地方で、宗教が§Y[Root.Religion.GetName]§!の州を§Y25§!州領有する"
- native_reductions_alternative_tooltip:0 "§Y[Root.GetName]§!もしくはその従属国が§Y北アメリカ§!及び§Y南アメリカ§!で、宗教が§Y[Root.Religion.GetName]§!の州を§Y75§!州領有する"
- port_jesuits_alternative_tooltip:1 "自国もしくは自国の朝貢国以外の従属国が§Yブラジル植民地方§!で、宗教が§Y[Root.Religion.GetName]§!の州を§Y20§!州領有する"
+ colombia_holy_order_alternative_tooltip:0 "§Y[Root.GetName]§!またはその従属国が§Yコロンビア植民地方§!で、宗教が§Y[Root.Religion.GetName]§!の州を§Y25§!州領有する"
+ mexico_holy_order_alternative_tooltip:0 "§Y[Root.GetName]§!またはその従属国が§Yメキシコ§!地方で、宗教が§Y[Root.Religion.GetName]§!の州を§Y25§!州領有する。"
+ native_reductions_alternative_tooltip:0 "§Y[Root.GetName]§!またはその従属国が§Y北アメリカ§!及び§Y南アメリカ§!で、宗教が§Y[Root.Religion.GetName]§!の州を§Y75§!州領有する。"
+ port_jesuits_alternative_tooltip:1 "自国または従属国（非朝貢国）が§Yブラジル植民地方§!で、宗教が§Y[Root.Religion.GetName]§!の州を§Y20§!州領有する"
