--- a/source/localisation/nw2_l_english.yml
+++ b/source/localisation/nw2_l_english.yml
@@ -434,8 +434,8 @@
  TRANSFER_TRADE_POWER_THEY_NOT_ADVANCED:0 "彼らは、私たちに交易力を移すのに十分なほど進歩していません。"
  OWNED_BY_OR_VASSALS:0 "§Y$COUNTRY$§!またはその従属国が所有している。"
  NOT_OWNED_BY_OR_VASSALS:0 "§Y$COUNTRY$§!またはその従属国が所有していない。"
- OWNED_BY_OR_NON_SOVEREIGN_SUBJECTS:1 "$COUNTRY|Y$かその朝貢国以外の従属国が領有している。"
- NOT_OWNED_BY_OR_NON_SOVEREIGN_SUBJECTS:1 "$COUNTRY|Y$かその朝貢国以外の従属国が領有していない。"
+ OWNED_BY_OR_NON_SOVEREIGN_SUBJECTS:1 "$COUNTRY|Y$またはその従属国（非朝貢国）が領有している。"
+ NOT_OWNED_BY_OR_NON_SOVEREIGN_SUBJECTS:1 "$COUNTRY|Y$またはその従属国（非朝貢国）が領有していない。"
  FE_USE_DYNAMIC_PROVINCE_NAMES:0 "州名の動的変更"
  religious_events.18.g:0 "[Root.Monarch.GetTitle]が新教会を導く。"
  religious_events.18.h:0 "フスの教えに従おう"
