Save/Update files [ci skip]

--- a/source/localisation/rule_britannia_l_english.yml
+++ b/source/localisation/rule_britannia_l_english.yml
@@ -403,8 +403,8 @@
  MACRO_BUILD_MANUFACTORY_TITLE:0 "製造工場の建設"
  MACRO_BUILDING_LIST_WINDOW_MANUFACTORIES_TITLE:0 "製造工場の建設"
  MACRO_BUILDING_GENERIC_MANUFACTORY_TITLE:0 "§Y製造工場§!\n"
- IDEA_WILL_INCREASE_INNOVATIVENESS:0 "\n\n今、このアイデアを選択することで我々の§Y革新性§!は$VAL|G$増加するでしょう。"
- TECH_WILL_INCREASE_INNOVATIVENESS:0 "\n今、この技術を研究することで我々の§Y革新性§!は$VAL|G$増加するでしょう。"
+ IDEA_WILL_INCREASE_INNOVATIVENESS:0 "\n\n今、このアイデアを選択することで§Y革新性§!が$VAL|G$増加します。"
+ TECH_WILL_INCREASE_INNOVATIVENESS:0 "\n今、この技術を研究することで§Y革新性§!が$VAL|G$増加します。"
  INNOVATIVENESS_INCREASE:0 "（$VAL|+1$の§Y革新性§!を獲得）"
  INNOVATIVENESS_DECREASE_DESC:2 "他国が我々よりも技術的に先行しているため、現在$VAL|3R$/月変化します。\n"
  INNOVATIVENESS_INCREASE_DESC:1 "我々が技術的に先行しているため、現在$VAL|3G$/月変化します。\n"
@@ -442,7 +442,7 @@
  INNOVATIVENESS_CHANGE_DESC:0 "我々の革新性は以下によって補正されています：\n"
  INNOVATIVENESS_FULL_MOD_DESC:0 "\n§Y100§!の革新性の効果：\n$MOD$"
  INNOVATIVENESS_DESC:2 "革新性は以下により増加します：\n最初の技術：$FIRSTINTECH|G$\n最初のアイデア：$FIRSTINIDEA|G$\n時代の先行：$AHEADOFTIME|G$/月\n\n革新性は以下により減少します：\n隣国からの遅れ：$BEHINDNEIGHBOURS|R$/月\n"
- INNOVATIVENESS_MOD_DESC:0 "\n我々の現在の革新性の効果：\n$MOD$"
+ INNOVATIVENESS_MOD_DESC:0 "\n現在の革新性の効果：\n$MOD$"
  TECH_INNOVATIVENESS_DATE:0 "\n技術レベル$TECH|Y$に最初に到達したのは$DATE|Y$です。"
  TECH_INNOVATIVENESS_DAYS_LEFT:0 "さらに$DAYS|Y$日間利用可能です。"
  IDEA_INNOVATIVENESS_DATE:0 "\nアイデアが最初に選択されたのは$DATE|Y$です。"
